--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Todo App
     </title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
-        rel="styleshee">
+        rel="stylesheet">
     <link rel="stylesheet" 
         href="style.css" 
         media="screen" 
@@ -13,12 +13,12 @@
   <body>
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" 
+      <a class="more-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?;</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="centr-main-elem">
+      <p id="top-section-for-add-elem">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" 
@@ -26,7 +26,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
               <label class="task">Pay Bills</label>
@@ -35,7 +35,7 @@
           <button class="delete">
               <img src="./remove.svg"></button>
         </li>
-        <li class="editMode">
+        <li class="edit-mode">
           <input type="checkbox">
               <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
