--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </head>
   <body>
     <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix picture">
       <a class="more-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
-          Want more details?;</a>
+          Want more details?</a>
     </div>
     <div class="centr-main-elem">
       <p id="top-section-for-add-elem">
