--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix picture">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="more-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?</a>
@@ -33,7 +33,7 @@
           <input type="text" class="task">
               <button class="edit">Edit</button>
           <button class="delete">
-              <img src="./remove.svg"></button>
+              <img src="./remove.svg" alt="remove"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
@@ -41,7 +41,7 @@
           <input type="text" value="Go Shopping" class="task">
               <button class="edit">Save</button>
           <button class="delete">
-              <img src="./remove.svg"></button>
+              <img src="./remove.svg" alt="remove"></button>
         </li>
       </ul>
       <h3>Completed</h3>
@@ -52,7 +52,7 @@
           <input type="text" class="task">
               <button class="edit">Edit</button>
           <button class="delete">
-              <img src="./remove.svg"></button>
+              <img src="./remove.svg" alt="remove"></button>
          </li>
       </ul>
     </div>
